<resources>
    <string name="app_name">NewYorkTimesApp</string>
    <string name="title_most_popular">Most Popular</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_favorites">Favorites</string>
<!--    <string name="most_popular_articles">Most: %1$s</string>-->
    <string name="most_emailed_articles">Most emailed articles</string>
    <string name="most_shared_articles">Most shared articles</string>
    <string name="most_viewed_articles">Most viewed articles</string>
    <string name="period">Time period</string>
    <string name="_1_day">1 day</string>
    <string name="_7_days">7 days</string>
    <string name="_30_days">30 days</string>
    <string name="comments">Comments</string>

    <string name="published">Published %1$s</string>
    <string name="updated">Updated %1$s</string>
    <string name="comments_title">Comments</string>
    <string name="comments_geo_and_date">%1$s | %2$s</string>
    <string name="no_comments_label">There are no comments on this article</string>
    <string name="favorites">Favorites</string>
    <string name="empty_favorite_label">There is no added articles</string>
    <string name="most_popular_title">%1$s of time: %2$s day(s)</string>

</resources>